# iceberg-meta

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
Formula/: iceberg-meta.rb
dev/: .env.example  DEMO.md  README.md  docker-compose.yml
dev/docker/minio/: Dockerfile  init.sh
dev/docker/seed/: requirements.txt  seed.py
dev/scripts/: seed_local_catalog.py
dev/tests/: conftest.py  data_factory.py  test_catalog_fallback.py  test_cli.py  test_cli_error.py  test_diff.py  test_formatters.py  test_health.py
docs/: configuration.md  contributing.md
examples/: iceberg-meta.yaml
quickstart/: .env.example  README.md  docker-compose.yml  iceberg-meta.yaml  seed.py
scripts/: check_monster.py  generate_monster_table.py  update_brew.py
src/iceberg_meta/: __init__.py  catalog.py  cli.py  demo.py  formatters.py  output.py  utils.py
src/iceberg_meta/tui/: app.py  app.tcss  screens.py  widgets.py
