[project]
name = "iceberg-meta"
dynamic = ["version"]
description = "CLI tool for exploring Apache Iceberg table metadata"
readme = "README.md"
license = "MIT"
authors = [{name = "Sibanda"}]
requires-python = ">=3.10"
keywords = ["iceberg", "metadata", "data-lake", "cli", "s3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "pyiceberg[s3fs,pyarrow,sql-sqlite]>=0.7.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
tui = ["textual>=3.1.0"]
dev = [
    "textual>=3.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[project.scripts]
iceberg-meta = "iceberg_meta.cli:app"

[project.urls]
Homepage = "https://github.com/MandlaSibanda196/iceberg-meta"
Documentation = "https://github.com/MandlaSibanda196/iceberg-meta#readme"
Issues = "https://github.com/MandlaSibanda196/iceberg-meta/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"iceberg_meta.tui" = ["*.tcss"]

[tool.setuptools.dynamic]
version = {attr = "iceberg_meta.__version__"}

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
